Alteracao Home.html

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -17,7 +17,7 @@
   </ion-item>
 
   <ion-item>
-    <ion-label>Resultado: {{imc}} ({{situacao}})</ion-label>
+    <ion-label>RESULTADO: {{imc}} ( {{situacao}} )</ion-label>
   </ion-item>
 
   <ion-item>
